app-wp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-dc1-mysql
  labels:
    app: wp-dc1
spec:
  selector:
    matchLabels:
      app: wp-dc1
  template:
    metadata:
      labels:
        app: wp-dc1
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 20
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: restore-pvc-mysql-prod #pvc-dc1-wordpress-mysql restore-pvc-mysql-prod 
---
apiVersion: v1
kind: Service
metadata:
  name: wp-dc1-mysql
  labels:
    app: wp-dc1
spec:
  clusterIP: None
  ports:
    - port: 3306
  selector:
    app: wp-dc1
---
apiVersion: v1
kind: Service
metadata:
  name: wp-dc1-app
  labels:
    app: wp-dc1
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: wp-dc1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-dc1-app
  labels:
    app: wp-dc1
spec:
  selector:
    matchLabels:
      app: wp-dc1
  template:
    metadata:
      labels:
        app: wp-dc1
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: wp-dc1
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 20
        ports:
        - containerPort: 80
          name: wp-dc1
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-dc1-wordpress-app
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: wp-dc1
  name: wp-dc1
spec:
  host: wordpress-dc1.apps.ocp-emea-clu01.coe.net
  port:
    targetPort: 80
  to:
    kind: Service
    name: wp-dc1-app
    weight: 100
